<resources>
    <string name="app_name">Conversor Divisas</string>
    <string name="conversor">Conversor de Divisas</string>
    <string name="Valor">Valor Obligatorio</string>
    <string name="Valor_Conver">Ingrese un valor</string>
    <string name="Valor_cambiado">Valor del cambio</string>
    <string name="Convertir">Convertir</string>
    <string name="error">Cambie el tipo de moneda </string>
    <string name="sin_valor">Debe digitar un valor a convertir</string>

    <string-array name="type_money">
        <item>Euro</item>
        <item>Dolar</item>
        <item>Yen</item>
        <item>Libra </item>

    </string-array>
</resources>