<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversor"
        android:textColor="@color/olivedrab"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinner_Receptor"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/spinner_conversor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <ImageView
        android:id="@+id/cambio_imageview"
        android:layout_width="285dp"
        android:layout_height="231dp"
        app:layout_constraintBottom_toTopOf="@+id/Titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_foto" />

    <Spinner
        android:id="@+id/spinner_conversor"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:background="@color/azure"
        android:entries="@array/type_money"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Titulo"
        app:layout_constraintVertical_bias="0.22" />

    <Spinner
        android:id="@+id/spinner_Receptor"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:background="@color/azure"
        android:entries="@array/type_money"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toEndOf="@+id/spinner_conversor"
        app:layout_constraintTop_toTopOf="@+id/Titulo"
        app:layout_constraintVertical_bias="0.22" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingreso_Layouts"
        android:layout_width="159dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        app:errorEnabled="true"
        app:helperText="@string/Valor"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_conversor"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingreso_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Valor_Conver"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Receptor_layout"
        android:layout_width="159dp"
        android:layout_height="90dp"
        android:focusable="false"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/ingreso_Layouts"
        app:layout_constraintTop_toBottomOf="@+id/spinner_Receptor"
        app:layout_constraintVertical_bias="0.025">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Receptor_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/Valor_cambiado" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_convertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Convertir"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Receptor_layout"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/ingreso_Layouts"
        app:layout_constraintTop_toBottomOf="@+id/Titulo"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>